--- a/index_css.css
+++ b/index_css.css
@@ -1,39 +1,151 @@
-:root {
-    --header-height: 80px;
-    --sidebar-width: 150px;
-    --navbar-height: 1.2em;
-}
-.layout {
-    display: block;
-    position: absolute;
-}
-#header {
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: var(--header-height);
-}
-#navbar {
-    background-color: rgb(70, 70, 70);
-    left: 0;
-    top: var(--header-height);
-    width: 100vw;
-    height: var(--navbar-height);
-}
-#sidebar {
-    left: 0;
-    top: calc(var(--header-height) + var(--navbar-height));
-    width: var(--sidebar-width);
-    height: calc(100vh - var(--header-height) - var(--navbar-height));
-    background-color: antiquewhite;
-}
-#container {
+body, html {
+    margin: 0;
+    padding: 0;
+    }
+    .container {
+        display: flex;
+        flex-direction: column;
+        height: 240vh;
+        width: 100vw;
+        background-size: cover;
+        background-position: center;
+    }
+    
+    .section {
+        flex: 1;
+        position:relative;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        transition: 0.1s ease-in;
+        transition: 0.2s ease-out;
+        /* transition: 0.5s ease-in-out; */
+    }
+    
+    /* .section1:hover{
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.8), rgba(0,0,0,1)),
+                url('https://images.newscientist.com/wp-content/uploads/2022/11/29180303/SEI_135609894.jpg');
+                background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;   
+    }
+    
+    .section2:hover{
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), rgba(0,0,0,1)),
+        url('https://live.staticflickr.com/912/39978304920_98b4750737_b.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    } */
+    
+    /* .section:hover {
+        opacity:0.5
+    } */
+    
+    .background-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0); /* 初始透明 */
+        transition: background-color 0.2s ease-in-out; /* 过渡背景颜色 */
+    }
+    
+    .section:hover .background-overlay {
+        background-color: rgba(0, 0, 0, 0.5); /* 淡化的背景颜色 */
+    }
+    
+    .section:hover .link-text {
+        /* display: block; 鼠標移上去時顯示連結文字 */
+        opacity: 1;
+    }
+    
+    .section1 {
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.3), rgba(0,0,0,1)),
+                    url('https://images.newscientist.com/wp-content/uploads/2022/11/29180303/SEI_135609894.jpg'); 
+                    
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .section2 {
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(225, 225, 225, 0),rgba(225, 225, 225, 0), rgba(225, 225, 225, 0), rgba(0,0,0,1)), url('https://live.staticflickr.com/912/39978304920_98b4750737_b.jpg');  
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;  
+    }
+    
+    .section3 {
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(225, 225, 225, 0),rgba(225, 225, 225, 0), rgba(225, 225, 225, 0), rgba(0,0,0,1)), url('https://img.lovepik.com/background/20211022/large/lovepik-starry-sky-background-image_401740955.jpg'); 
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat; 
+    }
+    
+    .section4 {
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(225, 225, 225, 0),rgba(225, 225, 225, 0), rgba(225, 225, 225, 0), rgba(0,0,0,1)), url('https://img.lovepik.com/background/20211022/large/lovepik-starry-sky-background-image_401740955.jpg' );  
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    .link-text {
+        text-align: center;
+        background-color:rgba(255, 255, 255, 0.5);
+        height: 50px;
+        width: 1000px;
+        font-size: 48px;
+        Font-family:Arial;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        position: relative; /* 設置連結文字為絕對定位 */
+        z-index: 1; /* 確保連結文字位於最上層 */
+        top: 50%; /* 垂直置中 */
+        left: 50%; /* 水平置中 */
+        transform: translate(-50%, -50%); /* 設置垂直水平居中 */
+        /* display: none; 初始隱藏連結文字 */
+        opacity: 0;
+        transition: 0.5s ease-in-out;
+    }
+    
+    a {
+        color:rgba(225, 225, 225, 1);
+        text-decoration:none;
+    }
 
-    left: var(--sidebar-width);
-    top: calc(var(--header-height) + var(--navbar-height));
-    width: calc(100vw - var(--sidebar-width));
-    height: calc(100vh - var(--header-height) - var(--navbar-height));
-}
-.content {
-    margin: 1em;
-}
+    .section-title {
+        text-align: center;
+        color: white;
+        font-size: 100px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 1;
+        transition: opacity 0.1s ease-in-out;
+        text-shadow: -5px 2px 4px rgba(0, 0, 0, 0.9);
+    }
+    
+    .section:hover .section-title {
+        opacity: 0;
+    }
+    
+    .main-title {
+        text-align: center;
+        font-size: 400%;
+        color: white;
+        line-height: -1em; /* 上部行高 */
+    }
+    
+    .sub-title {
+        text-align: center;
+        font-size: 100%;
+        color: white;
+        line-height: 0; /* 下部行高，较小 */
+    }
+
+    h1{
+        margin-bottom: 0px;
+        margin-top: 30px;
+    }
